Incorporacion de nuevas metricas para el analisis

--- a/static/styles/styleReview.css
+++ b/static/styles/styleReview.css
@@ -46,6 +46,7 @@ body{
     flex-direction: column;
     justify-content: flex-start;
     align-items: flex-start; /* Centramos la leyenda verticalmente */
+    margin-left: 15px;
 }
 .legend-item {
     display: flex;
