Ultimo cambio en analisis

--- a/static/templates/taskReview.html
+++ b/static/templates/taskReview.html
@@ -574,8 +574,6 @@
             </div>
         </div>
     </div>
-    
-    
 
     <input type="hidden" id="averageIronic" value="{{ statistics['irony']['averageIronic'] }}">
     <input type="hidden" id="averageNotIronic" value="{{ statistics['irony']['averageNotIronic'] }}">
@@ -670,7 +668,7 @@
             <!-- Parte derecha: gráfico circular -->
             <div class="col-md-8 d-flex flex-column justify-content-center align-items-center">
                 <div class="card shadow p-4" style="background-color: #e6e0f8; border-radius: 15px; margin-top: 20px; margin-left: 15px; margin-right: 15px;">
-                    <h3 class="text-center text-black mb-4">Aggressive, Offensive, Constructive, Argumentative, Intolerance Statistics</h3>
+                    <h3 class="text-center text-black mb-4">Aggressive, Offensive, Constructive, Argumentative, Intolerance and Stereotypes Statistics</h3>
                     <label for="timeSelector2">Select filter:</label>
                         <select id="timeSelector2" width="100" height="50">
                             <option value="days">Days</option>
@@ -684,6 +682,7 @@
                             <option value="constructive">Constructive</option>
                             <option value="argumentative">Argumentative</option>
                             <option value="intolerance">Intolerance</option>
+                            <option value="stereotype">Stereotypes</option>
                         </select>
                     <!-- Parte izquierda: tabla de datos -->
                     <div class="w-100 d-flex justify-content-center align-items-center">
