--- a/static/templates/taskReview.html
+++ b/static/templates/taskReview.html
@@ -279,7 +279,7 @@
             <!-- Parte derecha: gráfico circular -->
             <div class="col-md-10 d-flex flex-column justify-content-center align-items-center">
                 <div class="card shadow p-4" style="background-color: #e6e0f8; border-radius: 15px; margin-top: 20px; margin-left: 15px; margin-right: 15px;">
-                    <h3 class="text-center text-black mb-4">Videos Time Line</h3>
+                    <h3 class="text-center text-black mb-4">Video Activity Time Line</h3>
                     <div class="chart-container"></div>
                         <!-- Selector de días, semanas, meses -->
                         <label for="timeSelector">Select filter:</label>
