--- a/static/templates/taskReview.html
+++ b/static/templates/taskReview.html
@@ -328,6 +328,7 @@
                                     <p><strong>Description: </strong>{{statistics['sentiments']['positiveId']['video_description']}}</p>
                                     <p><strong>Text of the video:</strong> {{statistics['sentiments']['positiveId']['voice_to_text']}}</p>
                                     <p><strong>Date Creation:</strong> {{statistics['sentiments']['positiveId']['create_time']}}</p>
+                                    <p><strong>Video Id:</strong> {{statistics['sentiments']['positiveId']['id']}}</p>
                                 </div>
                             </div>
                             <!-- Video 2 Information -->
@@ -339,6 +340,7 @@
                                     <p><strong>Description: </strong>{{statistics['sentiments']['negativeId']['video_description']}}</p>
                                     <p><strong>Text of the video:</strong> {{statistics['sentiments']['negativeId']['voice_to_text']}}</p>
                                     <p><strong>Date Creation:</strong> {{statistics['sentiments']['negativeId']['create_time']}}</p>
+                                    <p><strong>Video Id:</strong> {{statistics['sentiments']['negativeId']['id']}}</p>
                                 </div>
                             </div>
                             <!-- Video 3 Information -->
@@ -350,6 +352,7 @@
                                     <p><strong>Description: </strong>{{statistics['sentiments']['neutralId']['video_description']}}</p>
                                     <p><strong>Text of the video:</strong> {{statistics['sentiments']['neutralId']['voice_to_text']}}</p>
                                     <p><strong>Date Creation:</strong> {{statistics['sentiments']['neutralId']['create_time']}}</p>
+                                    <p><strong>Video Id:</strong> {{statistics['sentiments']['neutralId']['id']}}</p>
                                 </div>
                             </div>
                             <div class="carousel-item">
@@ -360,6 +363,7 @@
                                     <p><strong>Description: </strong>{{statistics['sentiments']['noneId']['video_description']}}</p>
                                     <p><strong>Text of the video:</strong> {{statistics['sentiments']['noneId']['voice_to_text']}}</p>
                                     <p><strong>Date Creation:</strong> {{statistics['sentiments']['noneId']['create_time']}}</p>
+                                    <p><strong>Video Id:</strong> {{statistics['sentiments']['noneId']['id']}}</p>
                                 </div>
                             </div>
                         </div>
@@ -404,6 +408,7 @@
                                     <p><strong>Text of the video:</strong> {{statistics['emotion']['angerId']['voice_to_text']}}</p>
                                     <p><strong>Date Creation:</strong> {{statistics['emotion']['angerId']['create_time']}}</p>
                                     <p><strong>Anger Value:</strong> {{statistics['emotion']['bestAnger']}}</p>
+                                    <p><strong>Video Id:</strong> {{statistics['emotion']['angerId']['id']}}</p>
                                 </div>
                             </div>
                             <!-- Video 2 Information -->>
@@ -415,6 +420,7 @@
                                     <p><strong>Text of the video:</strong> {{statistics['emotion']['disgustId']['voice_to_text']}}</p>
                                     <p><strong>Date Creation:</strong> {{statistics['emotion']['disgustId']['create_time']}}</p>
                                     <p><strong>Disgust Value:</strong> {{statistics['emotion']['bestDisgust']}}</p>
+                                    <p><strong>Video Id:</strong> {{statistics['emotion']['disgustId']['id']}}</p>
                                 </div>
                             </div>
                             <!-- Video 3 Information -->
@@ -426,6 +432,7 @@
                                     <p><strong>Text of the video:</strong> {{statistics['emotion']['fearId']['voice_to_text']}}</p>
                                     <p><strong>Date Creation:</strong> {{statistics['emotion']['fearId']['create_time']}}</p>
                                     <p><strong>Fear Value:</strong> {{statistics['emotion']['bestFear']}}</p>
+                                    <p><strong>Video Id:</strong> {{statistics['emotion']['fearId']['id']}}</p>
                                 </div>
                             </div>
                             <!-- Video 4 Information -->
@@ -437,6 +444,7 @@
                                     <p><strong>Text of the video:</strong> {{statistics['emotion']['joyId']['voice_to_text']}}</p>
                                     <p><strong>Date Creation:</strong> {{statistics['emotion']['joyId']['create_time']}}</p>
                                     <p><strong>Joy Value:</strong> {{statistics['emotion']['bestJoy']}}</p>
+                                    <p><strong>Video Id:</strong> {{statistics['emotion']['joyId']['id']}}</p>
                                 </div>
                             </div>
                             <!-- Video 5 Information -->
@@ -448,6 +456,7 @@
                                     <p><strong>Text of the video:</strong> {{statistics['emotion']['sadnessId']['voice_to_text']}}</p>
                                     <p><strong>Date Creation:</strong> {{statistics['emotion']['sadnessId']['create_time']}}</p>
                                     <p><strong>Sadness Value:</strong> {{statistics['emotion']['bestSadness']}}</p>
+                                    <p><strong>Video Id:</strong> {{statistics['emotion']['sadnessId']['id']}}</p>
                                 </div>
                             </div>
                             <!-- Video 6 Information -->
